--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/bucles.js"></script>
+    <script src="./js/tp1-ejercicio9.js"></script>
 </body>
 </html>
