--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/tp1-ejercicio9.js"></script>
+   
+    <script src="./js/tp2-ejercicio10.js"></script>
 </body>
 </html>
