--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
    
-    <script src="./js/tp2-ejercicio10.js"></script>
+    <script src="./js/05-arrays.js"></script>
 </body>
 </html>
