--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
    
-    <script src="./js/06-funciones.js"></script>
+    <script src="./js/07-objetos.js"></script>
 </body>
 </html>
